2005-12-05  Alex Roitman  <shura@gramps-project.org>
	* merge some changes from gramps20.

2005-12-05  Don Allingham  <don@gramps-project.org>
	* src/data/main*.css: fix H6 and SUP

2005-12-05  Alex Roitman  <shura@gramps-project.org>
	* doc/gramps-manual/Makefile.am: Change symlink creation.
	* src/po/fr.po: Partial translation update.

2005-12-05  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: add more ui stuff
	* src/ReadGedcom.py: set batch properly

2005-12-04  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: start of a new family view.
	* src/gramps_main.py: register FamilyView

2005-12-04  Alex Roitman  <shura@gramps-project.org>
	* src/po/ru.po: Partial translation update.

2005-12-03  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/MergePeople.py: Avoid creating duplicate spouse-to-family links
	* src/po/es.po: Partial translation update.

2005-12-02  Alex Roitman  <shura@gramps-project.org>
	* src/po/ru.po: Partial translation update.

2005-12-02  Don Allingham  <don@gramps-project.org>
	* src/ReportOptions.py: fix inheritence

2005-12-01  Don Allingham  <don@gramps-project.org>
	* various: pychecker fixes
	* src/DateParser.py: properly call the date checking routine

2005-12-01  Alex Roitman  <shura@gramps-project.org>
	* src/ReportUtils.py (child_str): Initialize text.
	* src/docgen/LaTeXDoc.py: support "____"; support roman numerals
	in paragraph leaders.
	* src/plugins/BookReport.py (BookReportDialog.__init__):
	Initialize page_html_added before instantiating dialog class.

2005-12-01  Benny Malengier  <bm@cage.UGent.be>
	* src/dates/Date_nl.py: Add to CVS (bmcage).
	* src/dates/Makefile.am: Ship new file.

2005-11-30  Don Allingham  <don@gramps-project.org>
	* src/ReadGedcom.py: fix mixing note assignment
	* src/PeopleModel.py: streamline display

2005-11-29  Don Allingham  <don@gramps-project.org>
	* src/Relationship.py: limit search depth to 15 generations.

2005-11-29  Alex Roitman  <shura@gramps-project.org>